--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@types/react": "18.2.39",
         "@types/react-dom": "18.2.17",
         "autoprefixer": "10.4.16",
+        "axios": "^1.6.2",
+        "cookies-next": "^4.1.0",
         "eslint": "8.54.0",
         "eslint-config-next": "14.0.3",
         "framer-motion": "^10.16.5",
@@ -24,6 +26,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-redux": "^9.0.0",
+        "react-toastify": "^9.1.3",
+        "swr": "^2.2.4",
         "tailwindcss": "3.3.5",
         "typescript": "5.3.2"
     },
