--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cookies-next": "^4.1.0",
         "eslint": "8.54.0",
         "eslint-config-next": "14.0.3",
+        "firebase": "^10.7.1",
         "framer-motion": "^10.16.5",
         "next": "14.0.3",
         "next-themes": "^0.2.1",
@@ -27,7 +28,7 @@
         "react-dom": "18.2.0",
         "react-redux": "^9.0.0",
         "react-toastify": "^9.1.3",
-        "swr": "^2.2.4",
+        "redux-persist": "^6.0.0",
         "tailwindcss": "3.3.5",
         "typescript": "5.3.2"
     },
