--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "framer-motion": "^10.16.5",
         "next": "14.0.3",
         "next-themes": "^0.2.1",
+        "openai": "^4.24.1",
         "postcss": "8.4.31",
         "react": "18.2.0",
         "react-dom": "18.2.0",
